# Canonicar

./: .gitattributes  .gitignore  LICENSE  README.md  carla_client.py  config.py  docker-compose.yaml  requirements.txt  server.py  test.txt
ros_bridge/src/: package.xml  setup.py
ros_bridge/src/client_node/: package.xml  setup.py
ros_bridge/src/client_node/client_node/: RGB_track_dataset.py  data_collector.py  data_collector_readme.md  sensors_config.json  spawn_vehicle.py  spawn_vehicle2.py  test_missing_imgs.py
ros_bridge/src/data_collector_node/: setup.py
ros_bridge/src/data_collector_node/data_collector_node/: data_collector.py
ros_bridge/src/db_service_node/: db_service.py  package.xml  setup.cfg  setup.py
ros_bridge/src/db_service_node/db_service_node/: db_service.py  db_service_node.py
ros_bridge/src/demo_node/: package.xml  setup.cfg  setup.py
ros_bridge/src/demo_node/demo_node/: demo.py
ros_bridge/src/hello_world/: CMakeLists.txt  package.xml  publisher.py  setup.py  subscriber.py
ros_bridge/src/map_loader/: package.xml  setup.py
ros_bridge/src/ppo_node/: package.xml  setup.cfg  setup.py
ros_bridge/src/ppo_node/ppo_node/: ppo_node.py
ros_bridge/src/ros_interfaces/: CMakeLists.txt  package.xml
ros_bridge/src/sim_state_node/: package.xml  setup.cfg  setup.py
ros_bridge/src/vae/: decoder.py  export_encoder.py  package.xml  reconstructor.py  setup.cfg  setup.py  train.py  variational_encoder.py
ros_bridge/src/vehicle_control_node/: package.xml  setup.cfg  setup.py
ros_bridge/src/vision_model/: package.xml  setup.py  vision_model.py
(+667 files in other folders)
